unpackaged/main/default/objects/sfsp__SalesNodeBoundary__c/sfsp__SalesNodeBoundary__c.object-meta.xml
<CustomObject>
    <label>Sales Node Boundary</label>
    <nameField>
        <label>Sales Node Boundary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Boundaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>