unpackaged/main/default/objects/sfsp__SalesNodeBoundary__c/fields/sfsp__ContainerSet__c.field-meta.xml
<CustomField>
    <fullName>sfsp__ContainerSet__c</fullName>
    <label>Container Set (deprecated)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>