unpackaged/main/default/objects/sfsp__SalesNodeBoundary__c/fields/sfsp__Filter__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Filter__c</fullName>
    <label>Filter (deprecated)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>