unpackaged/main/default/objects/sfsp__SalesNodeBoundary__c/fields/sfsp__IncludePoints__c.field-meta.xml
<CustomField>
    <fullName>sfsp__IncludePoints__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IncludePoints (deprecated)</label>
    <type>Checkbox</type>
</CustomField>