unpackaged/main/default/objects/sfsp__SalesNodeBoundary__c/fields/sfsp__SalesBoundary__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesBoundary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Boundary</label>
    <referenceTo>sfsp__SalesBoundary__c</referenceTo>
    <relationshipLabel>Sales Boundaries</relationshipLabel>
    <relationshipName>SalesBoundaries</relationshipName>
    <type>Lookup</type>
</CustomField>