unpackaged/main/default/objects/sfsp__SalesNodeBoundary__c/fields/sfsp__SalesPlan__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Plan (deprecated)</label>
    <referenceTo>sfsp__SalesPlan__c</referenceTo>
    <relationshipLabel>Sales Node Boundaries</relationshipLabel>
    <relationshipName>SalesNodeBoundaries</relationshipName>
    <type>Lookup</type>
</CustomField>